# mlops-boat

./: .env.template  .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
infra/: 0-provider.tf  3-container-registry.tf  4-keyvault.tf  setup-tfbackend.sh  variables.tf
infra/hub/: 2-networking.tf  3-bastion.tf  4-password.tf  4-win-vm.tf  5-vm-agent.tf  setup-azdo-agent.sh  variables.tf  vm.tf
infra/hub/config/: dev.tfvars
infra/mlops/: 0-provider.tf  2-networking.tf  3-container-registry.tf  4-keyvault.tf  4-keyvault.tf.example  5-storage.tf  5-storage.tf.example  6-monitoring.tf  7-ml-workspace.tf  variables.tf
infra/mlops/config/: dev.tfvars
